--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,14 @@ endif(NOT CMAKE_BUILD_TYPE)
 
 # TODO: rather parse `$CC -march=native -dM -E - <<< ''` [gh #10]
 IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
+  IF (CMAKE_SYSTEM_PROCESSOR STREQUAL "e2k")
+    set(SSE2_TRUE true)
+    set(SSE42_TRUE true)
+    set(AES_TRUE true)
+    set(FALKHASH_OBJ      falkhash.c)
+    # set(FHTW_OBJ          fhtw.c)
+  ELSE (CMAKE_SYSTEM_PROCESSOR STREQUAL "e2k")
+   message(WARNING "!!! 2 ${CMAKE_SYSTEM_PROCESSOR}")
    EXEC_PROGRAM(cat ARGS "/proc/cpuinfo" OUTPUT_VARIABLE CPUINFO)
    STRING(REGEX REPLACE "^.*(sse2).*$" "\\1" SSE_THERE ${CPUINFO})
    STRING(COMPARE EQUAL "sse2" "${SSE_THERE}" SSE2_TRUE)
@@ -50,6 +58,7 @@ IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
    ENDIF()
    STRING(REGEX REPLACE "^.*(aes).*$" "\\1" AES_THERE ${CPUINFO})
    STRING(COMPARE EQUAL "aes" "${AES_THERE}" AES_TRUE)
+  ENDIF(CMAKE_SYSTEM_PROCESSOR STREQUAL "e2k")
 ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    EXEC_PROGRAM("/usr/sbin/sysctl -n machdep.cpu.features" OUTPUT_VARIABLE
       CPUINFO)
@@ -76,6 +85,8 @@ ELSEIF(CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
    ENDIF()
    STRING(REGEX REPLACE "^.*(AES).*$" "\\1" AES_THERE ${CPUINFO})
    STRING(COMPARE EQUAL "AES" "${AES_THERE}" AES_TRUE)
+ELSEIF(CMAKE_SYSTEM_PROCESSOR STREQUAL e2k)
+   message(WARNING "!!! 1 ${CMAKE_SYSTEM_PROCESSOR}")
 ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 
 if (CMAKE_COMPILER_IS_GNUCC
